--- a/elixir.html
+++ b/elixir.html
@@ -7,29 +7,29 @@
     <h1>Our Elixirs</h1>
 
     <h2>Green Tea Cooler</h2>
-    <p>
-      <img src="green.jpg">
+    <p blockquote class="greentea">
+      <img src="../lounge/green.jpg" alt="Green Tea">
       Chock full of vitamins and minerals, this elixir
       combines the healthful benefits of green tea with
       a twist of chamomile blossoms and ginger root.
     </p>
     <h2>Raspberry Ice Concentration</h2>
-    <p>
-      <img src="lightblue.jpg">
+    <p blockquote class="lightblue">
+      <img src="../lounge/lightblue.jpg" alt="Raspberry Ice">
       Combining raspberry juice with lemon grass,
       citrus peel and rosehips, this icy drink
       will make your mind feel clear and crisp.
     </p>
     <h2>Blueberry Bliss Elixir</h2>
-    <p>
-      <img src="blue.jpg">
+    <p blockquote class="bluetea">
+      <img src="../lounge/blue.jpg" alt="Blueberry Bliss">             
       Blueberries and cherry essence mixed into a base
       of elderflower herb tea will put you in a relaxed
       state of bliss in no time.
     </p>
     <h2>Cranberry Antioxidant Blast</h2>
-    <p>
-      <img src="red.jpg">
+    <p blockquote class="redtea"></p>
+      <img src="../lounge/red.jpg" alt="Cranberry Blast">
       Wake up to the flavors of cranberry and hibiscus
       in this vitamin C rich elixir.
     </p>
