--- a/journal/jounrnal.html
+++ b/journal/jounrnal.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link type=" text/css" rel="stylesheet" herf="lounge.css"
   <title>My Trip Around the USA on a Segway</title>
 </head>
 <body>
